Exercises/manifests/deployment-logoutput.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: timestamp-data
          emptyDir: {}
        - name: config
          configMap:
            name: logoutput-config
            items:
              - key: config.properties
                path: config.properties
      containers:
        - name: writer
          image: writer
          imagePullPolicy: Never
          ports:
           - containerPort: 8081
          volumeMounts:
           - name: timestamp-data
             mountPath: /opt/data
          resources:
            limits:
              cpu: 100m
              memory: 256M
            requests:
              cpu: 10m
              memory: 128M
        - name: reader
          image: reader
          imagePullPolicy: Never
          ports:
           - containerPort: 8080
          volumeMounts:
           - name: timestamp-data
             mountPath: /opt/tsdata
           - name: config
             mountPath: /opt/config
          resources:
            limits:
              cpu: 500m
              memory: 1G
            requests:
              cpu: 50m
              memory: 512M
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /status
              port: 8080
