Exercises/manifests/deployment-pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: pingpong
          imagePullPolicy: Never
          resources:
            limits:
              cpu: 500m
              memory: 1G
            requests:
              cpu: 50m
              memory: 512M
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /pongs
              port: 8080
