Exercises/manifests/service-logoutput.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
