Exercises/manifests/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: exercises
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: postgres
